Prevent install button wrap

--- a/src/index.scss
+++ b/src/index.scss
@@ -216,6 +216,7 @@ a, .btn.btn-link {
 }
 
 .launcher-action-install {
+  white-space: nowrap;
   width: min-content;
 }
 
